--- a/index.html
+++ b/index.html
@@ -18,26 +18,31 @@
     <!-- header_section -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
-
-        <ul class="list">
-          <li>
-            <a href="./index.html" class="navigation">Studio</a>
-          </li>
-          <li>
-            <a href="" class="navigation">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="navigation">Contacts</a>
-          </li>
-        </ul>
+        <div class="container_section_one_logo">
+          <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
+        </div>
+        <div  class="container_section_one_nav">
+          <ul class="list">
+            <li cla>
+              <a href="./index.html" class="navigation">Studio</a>
+            </li>
+            <li>
+              <a href="" class="navigation">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="navigation">Contacts</a>
+            </li>
+          </ul>
+        </div>
       </nav>
-      <address class="header_address">
-        <ul class="list">
-          <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+      <div  class="container_section_one_address">
+        <address class="header_address">
+          <ul class="list">
+            <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- main_section -->
