--- a/index.html
+++ b/index.html
@@ -211,11 +211,18 @@
 
     <!-- footer_sectoin -->
     <footer class="footer">
-      <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
-      <p class="footer_text">
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+      <div class="conteiner_footer">
+
+        <div class="conteiner_footer_logo">
+          <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
+        </div>
+        
+        <p class="footer_text">
+          Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+      </div>
+      
     </footer>
   </body>
 </html>
