--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 
     <!-- footer_sectoin -->
     <footer class="footer">
-      <div class="conteiner_footer">
+      <div class="container_footer">
 
-        <div class="conteiner_footer_logo">
+        <div class="container_footer_logo">
           <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
         </div>
         
