--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
           </ul>
         </nav>
 
-        <div class="header_address">
-          <address>
-            <ul class="list">
-              <li><a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a></li>
-              <li><a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a></li>
-            </ul>
-          </address>
-        </div>
+        <address>
+          <ul class="header_address">
+            <li class="header_address_list">
+              <a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a>
+            </li>
+            <li class="header_address_list">
+              <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
 
