--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="nav">
           <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
 
-          <ul class="list">
+          <ul class="header_main">
             <li class="header_main_nav">
               <a href="./index.html" class="navigation">Studio</a>
             </li>
