--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.google.com/share?selection.family=Raleway" />
     <link rel="preconnect" href="https://fonts.google.com/share?selection.family=Roboto" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet"/>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -20,11 +16,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header_section -->
     <header class="header">
-      <div class="container_header">
+      <div class="container container_header">
         <nav class="nav">
           <a href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
 
@@ -58,7 +55,7 @@
     <main>
       <!-- section_1 -->
       <section class="section_one">
-        <div class="container_section_one">
+        <div class="container container_section_one">
           <h1 class="introduction_hero">Effective Solutions for Your Business</h1>
 
           <button type="button" class="section_one_button">order service</button>
@@ -67,7 +64,7 @@
 
       <!-- section_2 -->
       <section class="section_two">
-        <div class="container_section_two">
+        <div class="container container_section_two">
           <h2 hidden>What we do best</h2>
 
           <ul class="container_section_two_text">
@@ -78,21 +75,21 @@
                 creative solution.
               </p>
             </li>
-            <li>
+            <li class="list_section_two">
               <h3 class="section_two_name">Punctuality</h3>
               <p class="section_two_paragraph">
                 Bring the key message to the brand's audience for the best price within the shortest
                 possible time.
               </p>
             </li>
-            <li>
+            <li class="list_section_two">
               <h3 class="section_two_name">Diligence</h3>
               <p class="section_two_paragraph">
                 Research and confirm brands that present the strongest digital growth opportunities
                 and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="list_section_two">
               <h3 class="section_two_name">Technologies</h3>
               <p class="section_two_paragraph">
                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -105,7 +102,7 @@
 
       <!-- section_3 -->
       <section class="section_three">
-        <div class="container_section_three">
+        <div class="container container_section_three">
           <h2 class="section_three_name">Our Team</h2>
           <ul class="section_three_list">
             <li class="team_card_list_item">
@@ -115,7 +112,7 @@
                 width="264"
                 height="260"
               />
-              <div class="section_three_h3_and_p">
+              <div class="section_three_team_card_info">
                 <h3 class="team_name_card">Mark Guerrero</h3>
                 <p class="team_description_card">Product Designer</p>
               </div>
@@ -127,7 +124,7 @@
                 width="264"
                 height="260"
               />
-              <div class="section_three_h3_and_p">
+              <div class="section_three_team_card_info">
                 <h3 class="team_name_card">Tom Ford</h3>
                 <p class="team_description_card">Frontend Developer</p>
               </div>
@@ -139,7 +136,7 @@
                 width="264"
                 height="260"
               />
-              <div class="section_three_h3_and_p">
+              <div class="section_three_team_card_info">
                 <h3 class="team_name_card">Camila Garcia</h3>
                 <p class="team_description_card">Marketing</p>
               </div>
@@ -151,7 +148,7 @@
                 width="264"
                 height="260"
               />
-              <div class="section_three_h3_and_p">
+              <div class="section_three_team_card_info">
                 <h3 class="team_name_card">Daniel Wilson</h3>
                 <p class="team_description_card">UI Designer</p>
               </div>
@@ -162,7 +159,7 @@
 
       <!-- section_4 -->
       <section class="section_four">
-        <div class="container_section_four">
+        <div class="container container_section_four">
           <h2 class="section_four_name">Our Portfolio</h2>
           <ul class="container_list_section_four">
             <li class="section_four_list">
@@ -249,8 +246,8 @@
 
     <!-- footer_sectoin -->
     <footer class="footer">
-      <div class="container_footer">
-        <a href="./index.html" class="logo">Web<span class="studio_footer">Studio</span></a>
+      <div class="container container_footer">
+        <a href="./index.html" class="logo link_footer">Web<span class="studio_footer">Studio</span></a>
 
         <p class="footer_text">
           Increase the flow of customers and sales for your business with digital marketing & growth
