--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="preconnect" href="https://fonts.google.com/share?selection.family=Roboto" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -65,7 +68,7 @@
       <!-- section_2 -->
       <section class="section_two">
         <div class="container container_section_two">
-          <h2 hidden>What we do best</h2>
+          <h2 class="visuallly-hidden">What we do best</h2>
 
           <ul class="container_section_two_text">
             <li class="list_section_two">
@@ -247,7 +250,9 @@
     <!-- footer_sectoin -->
     <footer class="footer">
       <div class="container container_footer">
-        <a href="./index.html" class="logo link_footer">Web<span class="studio_footer">Studio</span></a>
+        <a href="./index.html" class="logo link_footer"
+          >Web<span class="studio_footer">Studio</span></a
+        >
 
         <p class="footer_text">
           Increase the flow of customers and sales for your business with digital marketing & growth
