--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
       <section class="section_four">
         <div class="container container_section_four">
           <h2 class="section_four_name">Our Portfolio</h2>
-          <ul class="container_list_section_four">
-            <li class="section_four_list">
+          <ul class="list_section_four">
+            <li class="container_section_four_list">
               <img
                 src="./images/images_card_one/img_portfolio/img_portfolio_one.jpg"
                 alt="Banking App"
