--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </ul>
         </nav>
 
-        <address>
+        <address  class="address_hed">
           <ul class="header_address">
             <li class="header_address_list">
               <a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a>
